--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ aiogram>=3.7.0,<4.0
 pydantic-settings>=2.0.0
 aiohttp>=3.9.0
 openpyxl>=3.1.0
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+python-multipart>=0.0.6
+httpx>=0.25.0
 
