--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,6 +15,8 @@ services:
       - API_URL=${API_URL}
     ports:
       - "8000:8000"
+    volumes:
+      - ./.env:/app/.env:ro
 
   bot:
     build:
@@ -30,6 +32,8 @@ services:
       - ADMIN_CHAT_ID=${ADMIN_CHAT_ID}
       - API_URL=${API_URL}
       - WEB_URL=${WEB_URL}
+    volumes:
+      - ./.env:/app/.env:ro
 
   web:
     build:
